--- a/CRUDExample/Views/Persons/Index.cshtml
+++ b/CRUDExample/Views/Persons/Index.cshtml
@@ -92,6 +92,8 @@
                 {"ColumnName", nameof(PersonResponse.ReceiveNewsLetters)},
                 {"DisplayName", "Receive News Letters"},
                 })
+
+                <th>Options</th>
             </tr>
         </thead>
 
@@ -107,6 +109,14 @@
                     <td style="width: 10%">@person.CountryName</td>
                     <td style="width: 10%">@person.Address</td>
                     <td style="width: 20%">@person.ReceiveNewsLetters</td>
+                    <td style="width: 20%">
+                        <a asp-controller="Persons" asp-action="Edit" asp-route-personID="@person.PersonID">Edit</a>
+                      @*eg.  persons/edit/1*@
+                    </td>
+                    <td style="width: 20%">
+                        <a asp-controller="Persons" asp-action="Delete" asp-route-personID="@person.PersonID">Delete</a>
+                      @*eg.  persons/delete/1*@
+                    </td>
                 </tr>
             }
             <tr></tr>
