--- a/CRUDExample/Views/Persons/Create.cshtml
+++ b/CRUDExample/Views/Persons/Create.cshtml
@@ -71,7 +71,7 @@
         @*Country*@
         <div class="form-field flex">
             <div class="w-25">
-                <label asp-for="CountryID" class="form-label pt">Person Name</label>
+                <label asp-for="CountryID" class="form-label pt">Country Name</label>
             </div>
             <div class="flex-1">
                 <select asp-for="CountryID" asp-items="@ViewBag.CountryList" class="form-input">
