--- a/CRUDExample/Views/Persons/Index.cshtml
+++ b/CRUDExample/Views/Persons/Index.cshtml
@@ -6,6 +6,9 @@
 
 <h1>Persons</h1>
 <a asp-controller="Persons" asp-action="Create">create Person</a>
+<a asp-controller="Persons" asp-action="PersonsPDF" class="ml">Download as PDF</a>
+<a asp-controller="Persons" asp-action="PersonsCSV" class="ml">Download as CSV</a>
+<a asp-controller="Persons" asp-action="PersonsExcel" class="ml">Download as Excel</a>
 
 <form asp-controller="Persons" asp-action="Index" method="get">
 
