--- a/CRUDExample/Views/Shared/_Layout.cshtml
+++ b/CRUDExample/Views/Shared/_Layout.cshtml
@@ -13,7 +13,8 @@
             <div class="navbar-brand">CRUD Demo</div>
             <ul>
                 <li>
-                    <a href="~/persons/index">Persons</a>
+                    <a asp-action="Index" asp-controller="Persons">Persons</a>
+                    <a asp-action="UploadFromExcel" asp-controller="Countries">Upload Countries</a>
                 </li>
             </ul>
         </div>
