--- a/CRUDExample/Views/Persons/Index.cshtml
+++ b/CRUDExample/Views/Persons/Index.cshtml
@@ -52,7 +52,7 @@
 
     </div>
 
-    <table class="table w-100 mt">
+    <table class="table w-100 mt persons">
 
         <thead>
             <tr>
