--- a/CRUDExample/Views/Countries/UploadFromExcel.cshtml
+++ b/CRUDExample/Views/Countries/UploadFromExcel.cshtml
@@ -5,9 +5,28 @@
     ViewBag.Title = "Upload Countries from Excel";
 }
 
-<h1>Upload Countries from Excel</h1>
+@*breadcrumb starts*@
+<div class="flex">
+    <div class="flex-1">
 
-<div class="w-50">
+        <div class="text-grey">
+            <span>Contacts</span>
+            <i class="fa-solid fa-caret-right"></i>
+            <span class="text-grey">Countries</span>
+            <i class="fa-solid fa-caret-right"></i>
+            <span class="text-grey">Upload</span>
+        </div>
+
+    </div>
+</div>
+@*breadcrumb ends*@
+
+
+<div class="form-container">
+
+    <h2 class="text-large">Upload Countries from Excel</h2>
+
+
     <form 
         asp-action="UploadFromExcel" 
         asp-controller="Countries" 
@@ -34,4 +53,5 @@
         </div>
 
     </form>
+
 </div>
