--- a/CRUDExample/Views/Persons/Delete.cshtml
+++ b/CRUDExample/Views/Persons/Delete.cshtml
@@ -6,10 +6,31 @@
 @{
     ViewBag.Title = "Delete Person";
 }
-<a asp-controller="Persons" asp-action="Delete" class="link-hover">Back to Persons List</a>
-<h2>Edit Person</h2>
 
-<div class="center-box">
+@*breadcrumb starts*@
+<div class="flex">
+    <div class="flex-1">
+
+        <div class="text-grey">
+            <span>Contacts</span>
+            <i class="fa-solid fa-caret-right"></i>
+            <span class="text-grey">Persons</span>
+            <i class="fa-solid fa-caret-right"></i>
+            <span class="text-grey">Delete</span>
+        </div>
+
+    </div>
+</div>
+@*breadcrumb ends*@
+
+
+
+<div class="form-container">
+
+    <a asp-controller="Persons" asp-action="Delete" class="link-hover">Back to Persons List</a>
+    <h2 class="text-large">Delete Person</h2>
+    <h3>Are you sure you want to delete this person?</h3>
+
     <form asp-controller="Persons" asp-action="Delete" method="post">
 
         <input type="hidden" asp-for="PersonID" />
